src/main/resources/static/css/main.css
html {
    position: relative;
    min-height: 100%;
    height: 100%;
}

body {
    font-family: 'Source Sans Pro', 'Helvetica', Arial, sans-serif;
    padding-top: 3.5rem; /*Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
    /*padding-bottom: 3.125rem;*/
    display: flex; /* Creates flexboxes. */
    min-height: 100vh;
    flex-direction: column; /* Makes the body display vertical. */
}

h1 {
    font-size: 2rem;
}

h2 {
    font-size: 2rem;
    padding: 0px;
}

h3 {
    font-size: 1.17rem;
}

h4 {
    font-size: 1rem;
}

main {
    flex: 1; /* IMPORTANT FOR STICKY FOOTER. */
    /* Intializes the length which containers will expand or shrink. */
}

.loader {
    border: 16px solid white; /* Black */
    border-top: 16px solid black; /* Blue */
    border-radius: 50%;
    width: 150px;
    height: 150px;
    animation: spin 1s linear infinite;
    position: fixed;
    left: 50%;
    top: 50%;
    margin-left: -5.357em;
    margin-top: -5.357em;
}

.small-loader {
    float: right;
    border: 2px solid white; /* Black */
    border-top: 2px solid black; /* Blue */
    border-radius: 50%;
    width: 20px;
    height: 20px;
    animation: spin 1s linear infinite;
}

#overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    /*background: rgba(0, 0, 0, 0.5);*/
    z-index: 9999;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

td.uh-pre {
    white-space: pre; /* CSS 2.0 */
    white-space: pre-wrap; /* CSS 2.1 */
    white-space: pre-line; /* CSS 3.0 */
    white-space: -pre-wrap; /* Opera 4-6 */
    white-space: -o-pre-wrap; /* Opera 7 */
    white-space: -moz-pre-wrap; /* Mozilla */
    white-space: -hp-pre-wrap; /* HP Printers */
    display: inline-block;
    word-wrap: break-word;
    word-break: break-all;
}

.navbar {
    background-color: white;
    padding-top: 0;
    padding-bottom: 0;
}

.fixed-top .navbar-nav {
    /*padding: 2.5rem 0 0 0;
    font-size: .9375rem;*/
}

.fixed-top .navbar-brand {
    padding: 0;
}

.nav-tabs .nav-link {
    border: none;
}

.nav-link {
    white-space: nowrap;
}

.navbar-brand > img {
    background-color: transparent;
}

.navbar .navbar-nav .nav-item {
    padding-left: .3125rem;
    padding-right: .3125rem;
}

.navbar .navbar-nav .nav-link {
    color: var(--uh-dark-gray);
}

.navbar .navbar-nav .nav-link:hover,
.navbar .navbar-nav .nav-link:focus,
.navbar .navbar-nav .nav-link:active {
    color: var(--teal);
}

.navbar .navbar-logout {
    padding: .5rem .5625rem;
    /*font-size: .9375rem;*/
    color: #212529;
    border: 0;
    text-decoration: none;
}

.navbar .navbar-logout:hover {
    color: rgba(0, 0, 0, .7);
}

.user-icon {
    height: 100px;
    position: relative;
    width: 100px;
}

.user-icon .user-role {
    bottom: 0;
    position: absolute;
    right: -.25rem;
}

.spacer {
    margin-top: 2.5rem;
}

.required-asterisk {
    color: red;
}

.card.card-with-table {
    padding: 0;
    margin-top: 1rem;
}

.card.card-with-table.card-tab-content {
    margin-top: 0rem;
}

.card.card-tab-content, .card.card-tab-content .card-header {
    border-top-left-radius: 0px;
    margin-top: 0rem;
}

.card-with-table {
    border-bottom-left-radius: 0px;
    border-bottom-right-radius: 0px;
}

.card-with-table table > thead > tr > th {
    border-top: none;
}

.card-with-table table > thead > tr > th:first-child, .card-with-table table > tbody > tr > td:first-child {
    border-left: 0;
}

.card-with-table table > thead > tr > th:last-child, .card-with-table table > tbody > tr > td:last-child {
    border-right: 0;
}

table .w-20 {
    width: 20%;
}

table .w-30 {
    width: 30%;
}

table .p-5 {
    padding: 5px !important
}

table .p-10 {
    white-space: nowrap;
    padding: 5px 20px !important
}

table .p-11 {
    white-space: nowrap;
    padding: 5px 25px !important
}

table .p-12 {
    white-space: nowrap;
    padding: 5px 30px !important
}

.pagination .page-item.disabled {
    cursor: not-allowed;
}

.pagination {
    float: right;
}

.nav.nav-tabs {
    border-bottom: none;
}

@media (min-width: 992px) {
    body {
        /*padding-top: 7.1875rem; Required padding for .navbar-fixed-top. Change if height of navigation changes. */
        /*padding-bottom: 3.125rem;*/
    }

    .navbar {
        background-color: white;
    }

    .navbar .nav {
        padding: 2.5rem 1.25rem 0 0;
        background-color: white;
    }

    .navbar .navbar-brand {
        padding: 0;
    }

    .navbar .navbar-brand > img {
        background-color: transparent;
    }
}

@media (max-width: 991px) {
    .navbar .navbar-logout {
        padding-left: 0;
    }
}

.row.group-header {
    margin: 0 auto .5rem;
}

.clickable {
    cursor: pointer;
}

.sort-icon:after {
    content: '\f107';
}

.sort-icon.reverse:after {
    content: '\f106';
}

.modal-danger, .modal-danger .modal-title {
    color: #721c24;
}

.modal-danger .modal-header {
    background-color: #f8d7da;
    border-bottom-color: #f8d7da;
}

.modal-danger .modal-body {
    background-color: #ffeaece6;
}

.modal-danger .modal-footer {
    border-top-color: #ffeaece6;
}

.fade.in {
    opacity: 1;
}

.modal.in .modal-dialog {
    -webkit-transform: none;
    transform: none;
}

.modal-backdrop.in {
    filter: alpha(opacity=50);
    opacity: .5;
}


.modal-names {
    overflow: hidden;
    text-overflow: ellipsis;
}

.modal-dialog {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-align: center;
    align-items: center;
    min-height: calc(100% - (0.5rem * 2));
}

.modal-dialog::before {
    display: block;
    height: calc(100vh - (0.5rem * 2));
    content: "";
}

@media (min-width: 576px) {
    .modal-dialog {
        min-height: calc(100% - (1.75rem * 2));
    }

    .modal-dialog::before {
        height: calc(100vh - (1.75rem * 2));
    }
}

@media (max-width: 575.98px) {
    .nav.nav-tabs.flex-column > .nav-item > .nav-link {
        border: none;
        background-color: #e3f2ef;
        padding: 0px 0px 2px 0px;
    }
}

@media (max-width: 575.98px) {
    .img-fluid {
        width: 210px;
    }
}

#group-pills {
    margin-top: .5rem;
}

#group-pills > .nav-item {
    width: 2.75rem;
    height: 2.75rem;
}

#group-pills > .nav-item > .nav-link {
    padding-left: .75rem;
}

.manage-grouping-body {
    min-height: 25rem;
}

.selected-grouping-card {
    border-bottom: 0;
    border-left: 0;
    border-right: 0;
}

.selected-grouping-card > .card-header {
    border-left: 1px solid rgba(0, 0, 0, .125);
    border-right: 1px solid rgba(0, 0, 0, .125);
}

.selected-grouping-card table > tbody > tr:first-child > th, .selected-grouping-card table > tbody > tr:first-child > td {
    border-top: 0;
}

@media (min-width: 992px) {
    th.grouping-name {
        min-width: 10rem;
    }
}

th {
    font-size: .8rem;
    letter-spacing: .5px;
    text-transform: uppercase;
}

.manage-admins td:first-child {
    align-items: center;
    display: flex;
    justify-content: space-between;
}

.manage-groupings td:first-child i {
    flex-basis: 20px;
    margin-right: 8px;
}

.manage-groupings td:first-child span {
    flex: 1;
}

.manage-groupings td:last-child {
    max-width: 220px;
}

th.grouping-members {
    min-width: 8rem;
}

.manage-groupings td span.path {
    display: inline-block;
    overflow: hidden;
    text-overflow: ellipsis;
    width: calc(100% - 40px);
    white-space: nowrap;
}

.manage-groupings td:last {
    align-items: center;
    display: flex;
}

.manage-groupings tr td {
    padding: 0px;
}

@media (max-width: 789px) {
    .card-title {
        text-align: center;
    }
}

@media (max-width: 789px) {
    .card-title-text {
        text-align: center;
    }
}

form.seamless {
    display: flex;
    min-width: 12rem;
}

form.seamless input {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    flex: 1;
    width: calc(100% - 50px);
}

form.seamless button {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    flex-basis: 40px;
}

.form-control-sm {
    height: 20px !important;
}

@media (max-width: 991.98px) {
    .tooltip {
        display: none;
    }
}

.tooltip {
    pointer-events: none;
}

.fa.fa-trash-o {
    margin-right: .75rem;
}

.basis-column {
    width: 3%;
}

.card {
    overflow: hidden;
}

.nav-tabs .nav-item {
    margin-top: 1rem;
}

.card {
    margin-top: 1rem;
}

.dashboard-item-icon .fa-wrench {
    transform: rotate(-90deg);
}

.text-tracking {
    letter-spacing: 1px;
}

.container {
    flex: 1;
}

.fa.fa-fw.fa-pencil-square-o {
    color: #007bff;
}

.btn-bottom {
    position: absolute;
    bottom: 0;
    margin: -39px auto;
}

.btn-sm {
    padding: 0px 5px;
}

#footer-top {
    margin-top: 3rem;
}

.selected {
    background-color: #004e59;
    color: white;
}

.animate-if {
    color: black;
}

.animate-if.ng-enter, .animate-if.ng-leave {
    transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
}

.animate-if.ng-enter,
.animate-if.ng-leave.ng-leave-active {
    opacity: 0;
}

.animate-if.ng-leave,
.animate-if.ng-enter.ng-enter-active {
    opacity: 1;
}

.add-import-buttons {
    padding: 7px 15px;;
}


.import-table-tbody {
    display: block;
    height: 175px;
    overflow: auto;
}

.import-table-thead-tbody-tr {
    display: table;
    width: 75%;
    table-layout: fixed;
    white-space: nowrap;
}

@media (max-width: 992px) {
    .import-table-thead-tbody-tr {
        display: table;
        width: 100%;
        table-layout: fixed;
        white-space: nowrap;
    }
}

.import-table-thead {
    font-weight: bold;
    width: 100%;
    white-space: nowrap;
}

.blu-bold {
    color: #212529;
    font-weight: bold;
}

/**
 * Styling for selected grouping header.
 * Styles the grouping name and 'Return to Groupings'
 * button, so on mobile, the button sits on top of the
 * grouping name, eliminating whitespace.
 */
@media screen and (max-width: 735px) {
    #selectedGroupHeader {
        display: table; /* The row is now a table */
        /* Centering */
        margin: auto;
        width: 100%;
        padding: 0px;
    }

    #groupNameCol {
        display: table-footer-group; /* Makes the grouping name the footer of table */
    }

    #returnToGroup {
        display: table-header-group; /* Makes the button the header of table */

    }

}

/**
 * Styling for selected grouping header.
 * Styles the grouping name and 'Return to Groupings'
 * button, when browser size decreases, the button sits
 * on top of the grouping name, elimitaing whitespace.
 */
@media screen and (min-width: 3000px) {
    #groupNameCol {
        display: inline-block; /* displays group name inline */
    }

    #returnToGroup {
        display: inline-block; /* displays 'return to groupings button' inline */
    }
}

label input {
    margin-left: 10px;
}

.check-space {
    margin-right: 10px;
}

.nav-item.mx-auto .nav-link.rounded-circle .side-nav {
    align-items: center;
}

@media (max-width: 991.98px) {
    .nav-item.mx-auto .nav-link.rounded-circle .side-nav {
        align-items: center;
    }
}

.form-alert {
    margin-top: 2px;
    height: 45px;
    line-height: 42px;
    padding: 0px 15px;
}

.description-alert {
    width: 592px;
    margin-top: 2px;
    height: 35px;
    line-height: 30px;
    padding: 0px 15px;
}

.description-form-button {
    background-color: white;
    color: #004252;
    border: white;
    margin: 5px;
}

.description-input {
    float: left;
    border: white;
}

